--- a/style.css
+++ b/style.css
@@ -24,3 +24,8 @@ extracurricular.html{
  font-family: fantasy;
  color: darkred;
 }
+.center{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}
