--- a/style.css
+++ b/style.css
@@ -12,11 +12,8 @@ h2 {
   font-family: fantasy;
     color: darkred;
 }
-h1{font-family: fantasy
+.h1 {font-family: fantasy
     color: turquoise;
-}
-img{
-    align-self: center;
 }
 extracurricular.html{
  background:rgb:3, 66, 57; 
@@ -24,7 +21,7 @@ extracurricular.html{
  font-family: fantasy;
  color: darkred;
 }
-.center{
+.center {
     display:block;
     margin-left: auto;
     margin-right: auto;
