--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ h2 {
   font-family: fantasy;
     color: darkred;
 }
-.h1 {font-family: fantasy
-    color: turquoise;
+h1 {font-family: fantasy
+    color: rgb:12, 88, 89;
 }
 extracurricular.html{
  background:rgb:3, 66, 57; 
